syntax = "proto3";

package com.criteo.hadoop.garmadon;

option java_package = "com.criteo.hadoop.garmadon.event.proto";
option java_outer_classname = "ContainerEventProtos";

message ContainerResourceEvent {
    uint64 timestamp = 1;
    string type = 2;
    uint64 limit = 4;
    float value = 5;
}